# sk-stepwise

./: .gitignore  .pre-commit-config.yaml  02-Implementation.ipynb  Untitled.ipynb  pyproject.toml
.github/workflows/: basic.yml  main.yml
src/sk_stepwise/: 02-Implementation.ipynb  __init__.py  sw.py
tests/: test_basic.py
